fix alignment with chatbox and added image upload view

--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,9 +1,16 @@
 .form{
   text-align: center;
+  margin-top: 1em;
 }
 
 div.form form {
   /* max-width: 50%; */
   flex-direction: column;
   align-items: center;
+}
+
+.form_avatar {
+  display: flex;
+  justify-content: center;
+  
 }
